tests/ui/unbound_variable.stderr
error[E0425]: cannot find value `n` in this scope
  --> tests/ui/unbound_variable.rs:13:30
   |
13 |         Fib(n, x + y) <- Fib(n - 1, x), Fib(n - 2, y), (n <= 25);
   |                              ^ not found in this scope

error[E0425]: cannot find value `n` in this scope
  --> tests/ui/unbound_variable.rs:13:45
   |
13 |         Fib(n, x + y) <- Fib(n - 1, x), Fib(n - 2, y), (n <= 25);
   |                                             ^ help: a local variable with a similar name exists: `x`

error[E0425]: cannot find value `n` in this scope
  --> tests/ui/unbound_variable.rs:13:57
   |
13 |         Fib(n, x + y) <- Fib(n - 1, x), Fib(n - 2, y), (n <= 25);
   |                                                         ^ help: a local variable with a similar name exists: `x`

error[E0425]: cannot find value `n` in this scope
  --> tests/ui/unbound_variable.rs:13:13
   |
13 |         Fib(n, x + y) <- Fib(n - 1, x), Fib(n - 2, y), (n <= 25);
   |             ^ help: a local variable with a similar name exists: `x`
